--- a/index.html
+++ b/index.html
@@ -6,60 +6,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
-      <ul class="navigation">
-        <li class="navig_main_link"><a>главная</a></li>
-        <li ><a class="link_far_underline" href="">посмотреть лоты</a></li>
-        <li ><a class="link_far_underline" href="">об аукционе</a></li>
-      </ul>
+      <nav>
+        <ul class="navigation">
+          <li class="navig_link"><a>главная</a></li>
+          <li ><a class="navig_link link_far_underline" href="">посмотреть лоты</a></li>
+          <li ><a class="navig_link link_far_underline" href="">об аукционе</a></li>
+        </ul>
+      </nav>
       <a><img class="image_header" src="/images/logo-black.svg" alt="картинка оно тебе надо"></a>
-      <ul class="basic_info">
-        <li class=""><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
-        <li class=""><a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-        <li>наб. Принсенграхт 263-265, Амстердам</li>
-      </ul>
+      <address class="no_italic">
+        <p class="basic_info"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+          <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
     </header>
 
-    <section class="second_screen_section">
+    <main class="main_screen_section">
         <div class="overlay"></div>
-        <div class="second_screen_background_photo"></div>
-        <h1 class="second_screen_text"><span class="ono">оно</span><span class="tebe">тебе</span> <span class="nado">надо</span></h1>
-        <h2 class="text_second_screen_over_betbutton">Аукцион вещей, в которые никто не верил</h2>
-        <button class="betbutton">Сделать ставку</button>
-    </section>
-
-    <main>
-      <h2 class="main_section_header">Лоты</h2>
-      <div class="cards">
-        <div class="card_conteiner">
-          <div class="overlay"></div>
-          <div class="card first">
-            <a href="" class="card_header">Фильм режиссёра, который бросил киношколу</a>
-            <article class="card_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
-          </div>
-        </div>
-        <div class="card_conteiner">
-          <div class="overlay"></div>
-          <div class="card second">
-            <a href="" class="card_header">Книга, где описан один скучный день из жизни рекламного агента</a>
-            <article class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
-          </div>
-        </div>
-        <div class="card_conteiner">
-          <div class="overlay"></div>
-          <div class="card third">
-            <a href="" class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</a>
-            <article class="card_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</article>
-          </div>
-        </div>
-      </div>
-      <a href="" class="see_more">посмотреть больше</a>
+        <div class="main_screen_background_photo"></div>
+        <h1 class="main_screen_text"><span id="ono">оно</span><span id="tebe">тебе</span> <span id="nado">надо</span></h1>
+        <h2 class="text_main_screen_over_betbutton">Аукцион вещей, в которые никто не верил</h2>
+        <button class="betbutton_style">Сделать ставку</button>
     </main>
+
+    <section>
+      <h2 class="Lots_section_header">Лоты</h2>
+      <ul class="cards">
+        <li class="card_conteiner">
+          <div class="overlay"></div> 
+          <div class="card_background film"></div>
+          <a href="" class="card_link_style">
+            <article class="card_info">
+            <h3 class="card_header">Фильм режиссёра, который бросил киношколу</h3>
+            <p class="card_text">Не просто бросил, а ушёл с первой лекции. 
+              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — 
+              Пол Томас Андерсон?</p>
+          </article>
+          </a>
+        </li>
+        <li class="card_conteiner">
+          <div class="overlay"></div>
+          <div class="card_background book"></div>
+          <a href="" class="card_link_style">
+          <article class="card_info">
+            <h3 href="" class="card_header">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков 
+              препинания и с переходами на древнеанглийский. В ней одновременно 
+              рассказывается о 16 июня 1904 года и об истории литературы, начиная с 
+              античных времён. И это всё накладывается на эпическую поэму Гомера. 
+              Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+          </article>
+          </a>
+        </li>
+
+        <li class="card_conteiner">
+          <div class="overlay"></div>
+          <div class="card_background painting"></div>
+          <a href="" class="card_link_style">
+          <article class="card_info">
+            <h3 href="" class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь 
+              и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, 
+              котиков... Сколько бы вы на такое поставили, если бы не знали, что это 
+              — одна из революционных работ Кандинского?</p>
+          </article>
+          </a>
+        </li>
+      </ul>
+      <a href="" class="see_more">посмотреть больше</a>
+    </section>
 
     <section class="about">
       <div class="logo_white_background">
@@ -67,10 +88,10 @@
       </div>
       <h2 class="about_header">Об аукционе</h2>
       <div class="about_text">
-        <p class="text_first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
+        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
           Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
         </p>
-        <p class="text_second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+        <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
            Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
           Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
         </p>
@@ -78,16 +99,18 @@
     </section>
 
     <footer class="footer">
-      <ul class="basic_info footer_basicinfo">
-        <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
-        <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-        <li>наб.Принсенграхт 263-265,Амстердам</li>
-      </ul>
-      <ul class="navigation_footer">
-        <li class="main_link"><a href="">главная</a></li>
-        <li ><a href="">посмотреть лоты</a></li>
-        <li ><a href="">об аукционе</a></li>
-      </ul>
+      <address class="no_italic footer_adress_margin">
+        <p class="basic_info"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+          <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav>
+        <ul class="navigation_footer">
+          <li class="main_link"><a href="">главная</a></li>
+          <li ><a href="">посмотреть лоты</a></li>
+          <li ><a href="">об аукционе</a></li>
+        </ul>
+      </nav>
       <ul class="footer_links">
         <li class="footer_link "><a href=""><img class="footer_img" src="/images/yt.svg" alt=""></a></li>
         <li class="footer_link second_social"><a href=""><img class="footer_img" src="/images/vk.svg" alt=""></a></li>
