--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../fonts/fonts.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -55,7 +55,7 @@
           <div class="card_background book"></div>
           <a href="" class="card_link_style">
           <article class="card_info">
-            <h3 href="" class="card_header">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <h3 class="card_header">Книга, где описан один скучный день из жизни рекламного агента</h3>
             <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков 
               препинания и с переходами на древнеанглийский. В ней одновременно 
               рассказывается о 16 июня 1904 года и об истории литературы, начиная с 
@@ -70,7 +70,7 @@
           <div class="card_background painting"></div>
           <a href="" class="card_link_style">
           <article class="card_info">
-            <h3 href="" class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <h3 class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
             <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь 
               и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, 
               котиков... Сколько бы вы на такое поставили, если бы не знали, что это 
