--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
       </div>
       <h2 class="about_header">Об аукционе</h2>
       <div class="about_text">
-        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
+        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть<br> ни на один аукцион. 
           Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
         </p>
         <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-           Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
-          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+          Когда-то они казались просто неудачными. Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
+          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты <br> стали культовыми. 
         </p>
       </div>
     </section>
     <footer class="footer">
       <address class="no_italic footer_adress_margin">
-        <p class="basic_info"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+        <p class="basic_info_footer"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
         <ul class="navigation_footer">
-          <li class="main_link"><a href="">главная</a></li>
+          <li ><a href="">главная</a></li>
           <li ><a href="">посмотреть лоты</a></li>
           <li ><a href="">об аукционе</a></li>
         </ul>
