--- a/index.html
+++ b/index.html
@@ -18,97 +18,101 @@
           <li ><a class="navig_link link_far_underline" href="">об аукционе</a></li>
         </ul>
       </nav>
-      <a><img class="image_header" src="/images/logo-black.svg" alt="картинка оно тебе надо"></a>
-      <address class="no_italic">
-        <p class="basic_info"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+      <a><img class="image_header" src="./images/logo-black.svg" alt="картинка оно тебе надо"></a>
+      <address class="no_italic basic_info">
+        <a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          наб. Принсенграхт 263-265, Амстердам</p>
+          наб. Принсенграхт 263-265, Амстердам
       </address>
     </header>
-    <main class="main_screen_section">
-        <div class="overlay"></div>
-        <div class="main_screen_background_photo"></div>
-        <h1 class="main_screen_text"><span id="ono">оно</span><span id="tebe">тебе</span> <span id="nado">надо</span></h1>
-        <h2 class="text_main_screen_over_betbutton">Аукцион вещей, в которые никто не верил</h2>
-        <button class="betbutton_style">Сделать ставку</button>
-    </main>
-    <section>
-      <h2 class="Lots_section_header">Лоты</h2>
-      <ul class="cards">
-        <li class="card_conteiner">
-          <div class="overlay"></div> 
-          <div class="card_background film"></div>
-          <a href="" class="card_link_style">
+    <main>
+      <section class="cover">
+          <div class="overlay"></div>
+          <div class="main_screen_background_photo"></div>
+          <h1 class="cover__title"><span class="aligned-text_left aligned-text">оно</span><span class="aligned-text_center aligned-text">тебе</span> <span class="aligned-text_right aligned-text">надо</span></h1>
+          <h2 class="cover__description">Аукцион вещей, в которые никто не верил</h2>
+          <button class="bet-button">Сделать ставку</button>
+      </section>
+      <section>
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <div class="overlay"></div> 
+            <div class="card_background film"></div>
+            <a href="" class="card_link">
+              <article class="card_info">
+              <h3 class="card_header">Фильм режиссёра, который бросил киношколу</h3>
+              <p class="card_text">Не просто бросил, а ушёл с первой лекции. 
+                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — 
+                Пол Томас Андерсон?</p>
+            </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <div class="card_background book"></div>
+            <a href="" class="card_link">
             <article class="card_info">
-            <h3 class="card_header">Фильм режиссёра, который бросил киношколу</h3>
-            <p class="card_text">Не просто бросил, а ушёл с первой лекции. 
-              Какой была бы ваша ставка, если бы вы не знали, что режиссёр — 
-              Пол Томас Андерсон?</p>
-          </article>
-          </a>
-        </li>
-        <li class="card_conteiner">
-          <div class="overlay"></div>
-          <div class="card_background book"></div>
-          <a href="" class="card_link_style">
-          <article class="card_info">
-            <h3 class="card_header">Книга, где описан один скучный день из жизни рекламного агента</h3>
-            <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков 
-              препинания и с переходами на древнеанглийский. В ней одновременно 
-              рассказывается о 16 июня 1904 года и об истории литературы, начиная с 
-              античных времён. И это всё накладывается на эпическую поэму Гомера. 
-              Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-          </article>
-          </a>
-        </li>
-        <li class="card_conteiner">
-          <div class="overlay"></div>
-          <div class="card_background painting"></div>
-          <a href="" class="card_link_style">
-          <article class="card_info">
-            <h3 class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь 
-              и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, 
-              котиков... Сколько бы вы на такое поставили, если бы не знали, что это 
-              — одна из революционных работ Кандинского?</p>
-          </article>
-          </a>
-        </li>
-      </ul>
-      <a href="" class="see_more">посмотреть больше</a>
-    </section>
-    <section class="about">
-      <div class="logo_white_background">
-        <img class="img_logo" src="/images/logo-white.svg" alt="">
-      </div>
-      <h2 class="about_header">Об аукционе</h2>
-      <div class="about_text">
-        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть<br> ни на один аукцион. 
-          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-        </p>
-        <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-          Когда-то они казались просто неудачными. Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
-          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты <br> стали культовыми. 
-        </p>
-      </div>
-    </section>
+              <h3 class="card_header">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков 
+                препинания и с переходами на древнеанглийский. В ней одновременно 
+                рассказывается о 16 июня 1904 года и об истории литературы, начиная с 
+                античных времён. И это всё накладывается на эпическую поэму Гомера. 
+                Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="overlay"></div>
+            <div class="card_background painting"></div>
+            <a href="" class="card_link">
+            <article class="card_info">
+              <h3 class="card_header">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь 
+                и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, 
+                котиков... Сколько бы вы на такое поставили, если бы не знали, что это 
+                — одна из революционных работ Кандинского?</p>
+            </article>
+            </a>
+          </li>
+        </ul>
+        <a href="" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="logo_white_background">
+          <img class="img_logo" src="./images/logo-white.svg" alt="">
+        </div>
+        <div class="about_margin">
+          <h2 class="about_header">Об аукционе</h2>
+          <div class="about_text">
+            <p class="class_to_make_this_element_flex">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. 
+              Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p class="class_to_make_this_element_flex">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+              Когда-то они казались просто неудачными. Но, несмотря <span class="no_transfer_to_next_line">на критику, кажущуюся простоту или сложность, сейчас без этих лотов</span> невозможно представить современную культуру.
+              Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
-      <address class="no_italic footer_adress_margin">
-        <p class="basic_info_footer"><a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+      <address class="no_italic footer_adress_margin basic_info_footer">
+        <a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          наб. Принсенграхт 263-265, Амстердам</p>
+          наб. Принсенграхт 263-265, Амстердам
       </address>
       <nav>
         <ul class="navigation_footer">
-          <li ><a href="">главная</a></li>
+          <li ><a class="navig_link" href="">главная</a></li>
           <li ><a href="">посмотреть лоты</a></li>
           <li ><a href="">об аукционе</a></li>
         </ul>
       </nav>
       <ul class="footer_links">
-        <li class="footer_link "><a href=""><img class="footer_img" src="/images/yt.svg" alt=""></a></li>
-        <li class="footer_link second_social"><a href=""><img class="footer_img" src="/images/vk.svg" alt=""></a></li>
-        <li class="footer_link third_social"><a href=""><img class="footer_img" src="/images/pinterest.svg" alt=""></a></li>
+        <li class="footer_link "><a href=""><img class="footer_img" src="./images/yt.svg" alt=""></a></li>
+        <li class="footer_link second_social"><a href=""><img class="footer_img" src="./images/vk.svg" alt=""></a></li>
+        <li class="footer_link third_social"><a href=""><img class="footer_img" src="./images/pinterest.svg" alt=""></a></li>
       </ul>
     </footer>
   </body>
