--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
       <a><img class="image_header" src="./images/logo-black.svg" alt="картинка оно тебе надо"></a>
-      <address class="no_italic basic_info">
+      <address class="no_italic address header__address">
         <a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           наб. Принсенграхт 263-265, Амстердам
@@ -97,7 +97,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="no_italic footer_adress_margin basic_info_footer">
+      <address class="no_italic address footer_adress_margin">
         <a class="link_far_underline" href="tel:+9-999-555-5555">+9 999 555 5555</a>
           <a class="link_far_underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           наб. Принсенграхт 263-265, Амстердам
